* [IconSelect] Fixed layout of menu list to avoid overflow of 'No icon' text

--- a/src/view/Components/Form/Inputs/IconSelect/IconSelect.scss
+++ b/src/view/Components/Form/Inputs/IconSelect/IconSelect.scss
@@ -21,13 +21,16 @@
     flex-flow: row nowrap;
     align-items: center;
     justify-content: center;
-    width: var(--dd-icon-item-size);
+    width: 100%;
+    min-width: var(--dd-icon-item-size);
+    max-width: 33.3%;
     height: var(--dd-icon-item-size);
   }
 
   /* Icon item */
   .menu-item__content {
     display: none;
+    white-space: normal;
   }
 
   .menu-item__icon {
